--- a/singolo1.html
+++ b/singolo1.html
@@ -3,10 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Singolo</title>
   <link rel="stylesheet" href="singolo1.css">
 </head>
 <body>
-
+  <header class="header">
+    <div class="wrapper">
+      <nav class="navigation">
+        <h1 class="logo"><a href="#">Singolo</a></h1>
+        <ul class="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  
 </body>
 </html>
