--- a/singolo1.html
+++ b/singolo1.html
@@ -21,6 +21,13 @@
       </nav>
     </div>
   </header>
-  
+  <div id="slider">
+    <div class="wrapper">
+      <span class="arrow arrow-left"></span>
+      <img class="iphone-vertical" src="assets/iphone-vertical.png" alt="iphone-vertical"/>
+      <img class="iphone-horizontal" src="assets/iphone-horizontal.png" alt="iphone-horizontal"/>
+      <span class="arrow arrow-right"></span>
+    </div>
+  </div>
 </body>
 </html>
