--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <section id="slider">
       <div class="wrapper">
         <span class="arrow arrow-left"></span>
-        <img class="iphone-vertical" src="assets/iphone-vertical.png" alt="iphone-vertical" />
-        <img class="iphone-horizontal" src="assets/iphone-horizontal.png" alt="iphone-horizontal" />
+        <div class="img-wrapper"><img class="iphone-vertical" src="assets/iphone-vertical.png" alt="iphone-vertical" /></div>
+        <div class="img-wrapper"><img class="iphone-horizontal" src="assets/iphone-horizontal.png" alt="iphone-horizontal" /></div>
         <span class="arrow arrow-right"></span>
       </div>
     </section>
