feat: done responsive section slider

--- a/index.html
+++ b/index.html
@@ -55,8 +55,15 @@
     <section id="slider">
       <div class="wrapper">
         <span class="arrow arrow-left"></span>
-        <div class="img-wrapper"><img class="iphone-vertical" src="assets/iphone-vertical.png" alt="iphone-vertical" /></div>
-        <div class="img-wrapper"><img class="iphone-horizontal" src="assets/iphone-horizontal.png" alt="iphone-horizontal" /></div>
+        <div class="slider-1">
+          <div class="img-wrapper">
+            <img class="iphone-vertical" src="assets/iphone-vertical.png" alt="iphone-vertical" />
+            <!-- <img class="iphone-vertical" src="assets/iphone-vertical.png" alt="iphone-vertical" /> -->
+          </div>
+          <div class="img-wrapper">
+            <img class="iphone-horizontal" src="assets/iphone-horizontal.png" alt="iphone-horizontal" />
+          </div>
+        </div>
         <span class="arrow arrow-right"></span>
       </div>
     </section>
@@ -124,18 +131,18 @@
             <button class="tag">Artwork</button>
           </div>
           <div class="portfolio-images">
-            <img src="assets/portfolio-01.jpg" alt="portfolio-01">
-            <img src="assets/portfolio-02.jpg" alt="portfolio-02">
-            <img src="assets/portfolio-03.jpg" alt="portfolio-03">
-            <img src="assets/portfolio-04.jpg" alt="portfolio-04">
-            <img src="assets/portfolio-05.jpg" alt="portfolio-05">
-            <img src="assets/portfolio-06.jpg" alt="portfolio-06">
-            <img src="assets/portfolio-07.jpg" alt="portfolio-07">
-            <img src="assets/portfolio-08.jpg" alt="portfolio-08">
-            <img src="assets/portfolio-09.jpg" alt="portfolio-09">
-            <img src="assets/portfolio-10.jpg" alt="portfolio-10">
-            <img src="assets/portfolio-11.jpg" alt="portfolio-11">
-            <img src="assets/portfolio-12.jpg" alt="portfolio-12">
+            <img class="portfolio-image" src="assets/portfolio-01.jpg" alt="portfolio-01">
+            <img class="portfolio-image" src="assets/portfolio-02.jpg" alt="portfolio-02">
+            <img class="portfolio-image" src="assets/portfolio-03.jpg" alt="portfolio-03">
+            <img class="portfolio-image" src="assets/portfolio-04.jpg" alt="portfolio-04">
+            <img class="portfolio-image" src="assets/portfolio-05.jpg" alt="portfolio-05">
+            <img class="portfolio-image" src="assets/portfolio-06.jpg" alt="portfolio-06">
+            <img class="portfolio-image" src="assets/portfolio-07.jpg" alt="portfolio-07">
+            <img class="portfolio-image" src="assets/portfolio-08.jpg" alt="portfolio-08">
+            <img class="portfolio-image" src="assets/portfolio-09.jpg" alt="portfolio-09">
+            <img class="portfolio-image" src="assets/portfolio-10.jpg" alt="portfolio-10">
+            <img class="portfolio-image" src="assets/portfolio-11.jpg" alt="portfolio-11">
+            <img class="portfolio-image" src="assets/portfolio-12.jpg" alt="portfolio-12">
           </div>
         </div>
       </div>
